--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -540,7 +540,7 @@ rating:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
-  enable: true
+  enable: false
   app_id: tnShnVs7Somna4Addyb8SQJx-gzGzoHsz
   app_key: KY89RvNsxFH2zEk5hqBfVlIa
 
