--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo:
+  repo: git@github.com:songjianet/blog.git
   branch: gh-pages
   message:
 
