--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,43 +1,46 @@
-name: Deployment
+# This is a basic workflow to help you get started with Actions
 
+name: BLOG-CI
+
+# Controls when the action will run.
 on:
+  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [hexo] # only push events on source branch trigger deployment
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  hexo-deployment:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    env:
-      TZ: Asia/Shanghai
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v2
+      # 步骤名
+      - name: Checkout
+        # 使用的actions脚本，这里是官方提供的获取源码脚本
+        uses: actions/checkout@v2.3.1
         with:
-          submodules: true
+          persist-credentials: false
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v1
+      # 执行npm脚本打包项目
+      - name: Install and Build
+        run: |
+          npm install
+          npm run ci
+
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
-          node-version: '12.x'
-
-      - name: Install dependencies & Generate static files
-        run: |
-          node -v
-          npm i -g hexo-cli
-          npm i
-          hexo clean
-          hexo g
-          
-      - name: Deploy to Github Pages
-        env:
-          GIT_NAME: WillCAI2020
-          GIT_EMAIL: ${{ secrets.GIT_EMAIL }}
-          REPO: github.com/WillCAI2020/WillCAI2020.github.io
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: |
-          cd ./public && git init && git add .
-          git config --global user.name $GIT_NAME
-          git config --global user.email $GIT_EMAIL
-          git commit -m "build: Site deployed by GitHub Actions"
-          git push --force --quiet "https://$GH_TOKEN@$REPO" master:gh-pages
+          # 该workflow需要操作repo，因此需要一个密钥，下面会讲到如何获取这个密钥
+          ACCESS_TOKEN: ${{ secrets.GH_TOKEN }}
+          # 发布到的分支
+          BRANCH: gh-pages
+          # 要发布的文件夹
+          FOLDER: public
